src/objects/AssetUniversityCourse__c.object
<CustomObject>
    <description>CORE - This contains the association between Asset and University Course</description>
    <fields>
        <fullName>Asset__c</fullName>
        <description>This contains the Asset.</description>
        <inlineHelpText>This contains the Asset.</inlineHelpText>
        <label>Product in Use</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>University Courses</relationshipLabel>
        <relationshipName>UniversityCourses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the University Course Contact and the Products in Use</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products in Use</relationshipLabel>
        <relationshipName>Products_In_Use</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_BIU_Number__c</fullName>
        <externalId>true</externalId>
        <label>External_BIU_Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <formula>TEXT(Asset__r.Publisher__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publisher</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniversityCourse__c</fullName>
        <description>This contains the University Course</description>
        <inlineHelpText>This contains the University Course</inlineHelpText>
        <label>University Course</label>
        <referenceTo>UniversityCourse__c</referenceTo>
        <relationshipLabel>Products in Use</relationshipLabel>
        <relationshipName>AssetsUniversityCourse</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>University_Course_Name__c</fullName>
        <formula>HYPERLINK( UniversityCourse__c, UniversityCourse__r.Course_Name__c + &quot;-&quot; + UniversityCourse__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>University Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_NA__c</fullName>
        <label>Usage</label>
        <picklist>
            <picklistValues>
                <fullName>Tech Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Tech Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <description>CORE - Tracks Usage</description>
        <label>Usage</label>
        <picklist>
            <picklistValues>
                <fullName>0. No use/not applicable - Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Passive use/self-study - Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Adopted/assessment - Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended - Book/eBook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescribed - Book/eBook</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Asset University Course</label>
    <nameField>
        <displayFormat>AUC-{00000}</displayFormat>
        <label>AssetUniversityCourse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset University Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>